form for /reservations/new

--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -12,20 +12,10 @@
   <% end %>
 
   <div style="position: relative">
-    <%= text_field_tag(:date, value = nil, html_options = { class: 'form-control datepicker', placeholder: 'mm/dd/yyyy' }) %>
+    <%= text_field_tag("reservation[date]", value = @reservation.date, html_options = { class: 'form-control datepicker', placeholder: 'mm/dd/yyyy' }) %>
 
-    <%= text_field_tag(:time, value = nil, html_options = { class: 'form-control timepicker', placeholder: 'time' }) %>
-  </div>
-  
-  <div class="field">
-    <%= form.label :date %>
-    <%= form.date_select :date %>
-  </div>
-
-  <div class="field">
-    <%= form.label :time %>
-    <%= form.time_select :time %>
-  </div>
+    <%= text_field_tag("reservation[time]", value = @reservation.time.strftime('%I:%M %p'), html_options = { class: 'form-control timepicker', placeholder: 'time' }) %>
+  </div>  
 
   <div class="actions">
     <%= form.submit %>
